@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.01-30.01
-Date: 2009-12-21
+Version: 0.01-31
+Date: 2010-2-3
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <ys463@columbia.edu>, Masanao Yajima
         <yajima@stat.columbia.edu>,
