@@ -1,3 +1,7 @@
+2010-2-3  Yu-Sung Su <ys463@columbia.edu>  
+    * R/as.bugs.array: fix sims.list permutation
+    * R/jags.sim: fix sims.list permutation
+
 2009-12-21  Yu-Sung Su <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 0.01-30.
     * R/as.bugs.array2: comment out n.burnin=0 in the code.
